fix(home): add spacing below the survey list

--- a/src/app/features/home/home.scss
+++ b/src/app/features/home/home.scss
@@ -74,6 +74,7 @@
 
 .surveys {
   padding-top: 90px;
+  padding-bottom: 90px;
 }
 
 .surveys__title {
